pwa/src/templates/wooItemDetailTemplate/WOOItemDetailTemplate.module.css
.table {
  background-color: var(--utrecht-table-background-color);
  border-collapse: var(--utrecht-table-border-collapse);
}

.container {
  margin-block-start: var(--utrecht-space-block-3xl);
}

.container > *:not(:last-child) {
  margin-block-end: var(--utrecht-space-block-lg);
}

.content > *:not(:last-child) {
  margin-block-end: var(--utrecht-space-block-lg);
}

.heading1 {
  color: var(
    --utrecht-heading-1-color,
    var(--utrecht-heading-color, var(--utrecht-document-color, inherit))
  );
  font-family: var(
    --utrecht-heading-1-font-family,
    var(--utrecht-heading-font-family, var(--utrecht-document-font-family))
  );
  font-size: var(--utrecht-heading-1-font-size);
  font-weight: var(
    --utrecht-heading-1-font-weight,
    var(--utrecht-heading-font-weight, bold)
  );
  letter-spacing: var(--utrecht-heading-1-letter-spacing);
  line-height: var(--utrecht-heading-1-line-height);
  margin-block-end: 0;
  margin-block-start: 0;
  text-transform: var(--utrecht-heading-1-text-transform, inherit);
}

.backLink:hover {
  cursor: pointer;
}

.backLink {
  display: flex;
  align-items: center;
}

.tableBody {
  border: var(--utrecht-table-body-border);
}

.tableBody > tr > td {
  border-inline-end-width: var(--utrecht-table-cell-border-inline-end-width);
  border-inline-end-style: var(--utrecht-table-cell-border-inline-end-style);
  border-inline-end-color: var(--utrecht-table-cell-border-inline-end-color);
}

.tableBody .tableRow:nth-child(odd) {
  background-color: var(--utrecht-table-row-alternate-odd-background-color);
  color: var(--utrecht-table-row-alternate-odd-color);
}

.tableBody .tableRow:nth-child(odd):hover {
  background-color: var(--utrecht-table-row-hover-background-color);
  color: var(--utrecht-table-row-hover-color);
}

.tableBody .tableRow:nth-child(even) {
  background-color: var(--utrecht-table-row-alternate-even-background-color);
  color: var(--utrecht-table-row-alternate-even-color);
}
.tableBody .tableRow:nth-child(even):hover {
  background-color: var(--utrecht-table-row-hover-background-color);
  color: var(--utrecht-table-row-hover-color);
}

.pagination {
  display: flex;
  justify-content: space-between;
}

@media only screen and (max-width: 576px) {
  .pagination {
    display: grid;
    justify-content: unset;
    justify-items: center;
    margin-block-start: var(--utrecht-space-block-lg);
  }
}

